[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/main_button.png" type="Texture" id=1]
[ext_resource path="res://sprites/login_background.png" type="Texture" id=2]
[ext_resource path="res://sprites/main_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://fonts/press_start_16pt_outline.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/LoginUI.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0.156863, 0.156863, 0.156863, 1 )
font_data = ExtResource( 5 )

[node name="LoginUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Title" type="Label" parent="Background/VBoxContainer"]
margin_right = 224.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Login"
align = 1
valign = 1
percent_visible = -0.2

[node name="Margin" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 28.0
margin_right = 224.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 12 )

[node name="Username" type="Label" parent="Background/VBoxContainer"]
margin_top = 44.0
margin_right = 224.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )
text = "Username"

[node name="UsernameInput" type="LineEdit" parent="Background/VBoxContainer"]
margin_top = 64.0
margin_right = 224.0
margin_bottom = 88.0

[node name="Password" type="Label" parent="Background/VBoxContainer"]
margin_top = 92.0
margin_right = 224.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 4 )
text = "Password"

[node name="PasswordInput" type="LineEdit" parent="Background/VBoxContainer"]
margin_top = 112.0
margin_right = 224.0
margin_bottom = 136.0

[node name="Margin2" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 140.0
margin_right = 224.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 8 )

[node name="LoginButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_left = 48.0
margin_top = 152.0
margin_right = 176.0
margin_bottom = 184.0
rect_min_size = Vector2( 128, 32 )
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Background/VBoxContainer/LoginButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Login"
align = 1
valign = 1

[node name="Margin3" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 188.0
margin_right = 224.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 4 )

[node name="CreateAccountButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_left = 34.0
margin_top = 196.0
margin_right = 190.0
margin_bottom = 228.0
rect_min_size = Vector2( 156, 32 )
size_flags_horizontal = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Background/VBoxContainer/CreateAccountButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Register"
align = 1
valign = 1

[connection signal="button_down" from="Background/VBoxContainer/LoginButton" to="." method="_on_LoginButton_button_down"]
